sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '<-' found.
while(i <- getNombreValeurs() to 1 ) 
        ^AlgBubbleSort1:7: error: ';' expected but integer literal found.
while(i <- getNombreValeurs() to 1 ) 
                                 ^